--- a/CSS/fac.css
+++ b/CSS/fac.css
@@ -159,6 +159,99 @@ body {
     border-radius: none!important;
     
   }
+  **********************************
+  .fac-container {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+}
+  .fac-content {
+    font-size: 20px;
+    color: white;
+    margin-left: 0%;
+    margin-right: 40px;
+    text-align: justify;
+    white-space: 1;
+    margin-top: 50px;
+}
+.fac-img img{
+    margin-top: 50px;
+    margin-left: 20px;
+    height: 80%;
+    width: 80%;
+}
+  #infra {
+    display: block;
+  }
+  #transport{
+    display: none;
+  }
+  #lab{
+    display: none;
+  }
+  #hostel{
+    display: none;
+  }
+  #libaray{
+    display: none;
+  }
+  .content-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+  .infra-class {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:500;
+
+  }
+  .infra-content {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  .transport-content {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .hostel-class {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:500;
+
+  }
+  .hostel-content {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  .lab-class {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:500;
+
+  }
+  .lab-content {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  .libaray-class {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:500;
+
+  }
+  .libaray-content {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  .fac-img img{
+    height: auto;
+    width: auto;
+  }
+ 
+  
   
   @media(max-width: 567px){
     
