--- a/CSS/fac.css
+++ b/CSS/fac.css
@@ -227,11 +227,12 @@ body {
     align-items: center;
   }
   .lab-class {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   }
   .lab-content {
+    font-style: normal;
     display: flex;
     gap: 1rem;
     align-items: center;
