--- a/frontend/CSS/about.css
+++ b/frontend/CSS/about.css
@@ -166,3 +166,25 @@
 .style{
   color: #fff;
 }
+
+@media screen and (max-width:394px) {
+  *{
+    max-width: 391px;
+  }
+  #logo{
+    margin-left:35vw;
+  }
+  .container{
+    margin-top:20px;
+    margin-left: -40px;
+  }
+
+  .navContent {
+    display: inline-flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    margin-left:-4rem;
+  }
+  
+  
+}
