--- a/frontend/CSS/style.css
+++ b/frontend/CSS/style.css
@@ -443,3 +443,72 @@ header nav ul.action-menu .nav-item .nav-link {
   text-align: center;
 
 }
+
+
+
+@media screen and (max-width:394px) {
+  *{
+    max-width: 391px;
+  }
+  #logo{
+    margin-left:35vw;
+  }
+  .container{
+    margin-top:20px;
+    margin-left: -40px;
+  }
+
+  .navContent {
+    display: inline-flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    margin-left:-4rem;
+  }
+  .infra-content{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  }
+  .infra-content p{
+    margin-left:0px;
+      
+  }
+  .con p{
+    margin-left:-25px;
+  }
+
+  .infra-class{
+    margin-left: 70px;
+  }
+  
+  #content-img{
+    margin-left:-25px;
+    width: 37px;
+    width:350px;
+      }
+   
+     .transport-content{
+      display: flex;
+      flex-direction: column;
+     }
+     .transport-class h1{
+      margin-left:60px;
+     }
+     #content-img{
+      margin-left:-50px;
+      margin-top:10px;
+      width:375px;
+     }
+     #content-img1{
+      margin-left:-50px;
+      margin-top:10px;
+      width:375px;
+     }
+
+  .image{
+    width:350px;
+  }
+  .container{
+    margin-left: 10px;
+  }
+}
