--- a/frontend/CSS/contact.css
+++ b/frontend/CSS/contact.css
@@ -337,3 +337,28 @@ body {
       font-size:1.2rem;
     }
   }
+  .map-responsive{
+
+    overflow:hidden;
+
+    padding-bottom:56.25%;
+
+    position:relative;
+
+    height:0;
+
+}
+
+.map-responsive iframe{
+
+    left:0;
+
+    top:0;
+
+    height:100%;
+
+    width:100%;
+
+    position:absolute;
+
+}
