--- a/frontend/CSS/style.css
+++ b/frontend/CSS/style.css
@@ -173,11 +173,13 @@ header nav ul.action-menu .nav-item .nav-link {
 
 
 .carousel-item {
-  width: 100%;
+  width: 95%;
   height: 100vh!important;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-left: 2.5%;
+  
 }
 
 .carousel-item::before {
@@ -296,11 +298,13 @@ header nav ul.action-menu .nav-item .nav-link {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  min-height: 400px;
+  min-height: 250px;
+  
   position: relative;
+  margin-left:2.5%;
 }
 
-.about .play-btn {
+/* .about .play-btn {
   width: 94px;
   height: 94px;
   background: radial-gradient(#ffb03b 50%, rgba(255, 176, 59, 0.4) 52%);
@@ -310,9 +314,9 @@ header nav ul.action-menu .nav-item .nav-link {
   left: calc(50% - 47px);
   top: calc(50% - 47px);
   overflow: hidden;
-}
+} */
 
-.about .play-btn::after {
+/* .about .play-btn::after {
   content: '';
   position: absolute;
   left: 50%;
@@ -325,9 +329,9 @@ header nav ul.action-menu .nav-item .nav-link {
   border-left: 15px solid #fff;
   z-index: 100;
   transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
+} */
 
-.about .play-btn::before {
+/* .about .play-btn::before {
   content: '';
   position: absolute;
   width: 120px;
@@ -348,12 +352,12 @@ header nav ul.action-menu .nav-item .nav-link {
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
-}
+} */
 
-.about .play-btn:hover::after {
+/* .about .play-btn:hover::after {
   border-left: 15px solid #ffb03b;
   transform: scale(20);
-}
+} */
 
 .about .play-btn:hover::before {
   content: '';
@@ -511,4 +515,29 @@ header nav ul.action-menu .nav-item .nav-link {
   .container{
     margin-left: 10px;
   }
+}
+.map-responsive{
+
+  overflow:hidden;
+
+  padding-bottom:56.25%;
+
+  position:relative;
+
+  height:0;
+
+}
+
+.map-responsive iframe{
+
+  left:0;
+
+  top:0;
+
+  height:100%;
+
+  width:100%;
+
+  position:absolute;
+
 }
