--- a/frontend/CSS/fac.css
+++ b/frontend/CSS/fac.css
@@ -130,7 +130,7 @@ body {
   
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
   
   .section-title h2 {
@@ -139,6 +139,7 @@ body {
   /*****************************
       NavBar
   ******************************/
+  
   header nav {
     background: #fff;
     box-shadow: 0px 0px 5px #4444;
